@startuml

title __TWITTER's Class Diagram__\n

  package com.koltunm.skanner {
    package com.koltunm.skanner.clients {
      package com.koltunm.skanner.clients.twitter {
        class RequestLimiter {
            - requestsPerSecond : int
            - requestsPerMinute : int
            - requestCountMin : int
            - requestCountSec : int
            + RequestLimiter()
            + waiting()
            + getRequestsPerSecond()
            + getRequestsPerMinute()
            + getRequestCountMin()
            + getRequestCountSec()
            + setRequestCountMin()
            + setRequestCountSec()
            + incrementCount()
        }
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.clients {
      package com.koltunm.skanner.clients.twitter {
        class RequestResetter {
            + RequestResetter()
            + run()
        }
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.clients {
      package com.koltunm.skanner.clients.twitter {
        class Tweet {
            - author : String
            - message : String
            - date : LocalDateTime
            + Tweet()
            + sentimentString()
            + getSentimentHeading()
            + getAuthor()
            + setAuthor()
            + getMessage()
            + setMessage()
            + getDateTime()
            + getDate()
            + setDate()
            + getTweetFeed()
        }
      }
    }
  }
  

  RequestResetter -up-|> Runnable
  RequestResetter o-- RequestLimiter : limiter
  Tweet -up-|> SentimentAnalyzable
  Tweet o-- TweetFeed : tweetFeed


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
